[package]
name = "tls-test"
version = "0.1.0"
authors = ["Paul Sajna <sajattack@gmail.com>"]
edition = "2018"

[dependencies]
psp = { path = "../../psp" }
nb = "0.1.3"
libc = "0.2"
drogue-network = {git = "https://github.com/drogue-iot/drogue-network/"}


[dependencies.drogue-tls]
git = "https://github.com/drogue-iot/drogue-tls/"
features = ["in-buffer-16k", "out-buffer-16k"]

[patch.crates-io]
drogue-tls-sys = {git = "https://github.com/drogue-iot/drogue-tls/"}
drogue-network = {git = "https://github.com/drogue-iot/drogue-network/"}
