[package]
name = "tls-test"
version = "0.1.0"
authors = ["Paul Sajna <sajattack@gmail.com>"]
edition = "2018"

[dependencies]
psp = { path = "../../psp" }
nb = "0.1.3"
libc = "0.2"
drogue-network = { path = "./vendor/drogue-network" }


[dependencies.drogue-tls]
path = "./vendor/drogue-tls/drogue-tls"
features = ["in-buffer-16k", "out-buffer-16k"]

[patch.crates-io]
drogue-network = { path = "./vendor/drogue-network" }
drogue-tls-sys = { path = "./vendor/drogue-tls/drogue-tls-sys" }
